# cg

examples/: CMakeLists.txt
examples/convex_hull/: CMakeLists.txt  andrew_hull.cpp  convex_hull.cpp
examples/operations/: CMakeLists.txt  rectangle_intersects_segment.cpp  triangle_contains_point.cpp
examples/simplify/: CMakeLists.txt  simplify.cpp
include/cg/convex_hull/: Andrew.h  graham.h
include/cg/operations/: distance.h  orientation.h  orientation.h.orig
include/cg/operations/contains/: contour_point.h
include/cg/primitives/: contour.h  contour.h.orig  rectangle.h  rectangle.h.orig  segment.h  vector.h
include/cg/simplification/: duglas-pekker.h
tests/: .CMakeLists.txt.un~  CMakeLists.txt  CMakeLists.txt.orig  contains.cpp  convex_hull.cpp
